# embind-interop-proto

./: .gitignore  CMakeLists.txt  README.md  build.py
csp/modules/csp-services/Templates/: api.h.interface.jinja2  api.h.mock.jinja2
csp/modules/signalr/tools/7za920/: 7-zip.chm
csp/teamcity/: BootstrapPremake.bat  requirements.txt
src/bindings/: csp_bindings.cpp
test/: serve.py  test.html
